# vectordb

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 25235ae1c497_replace_soft_delete_with_hard_delete_.py  39ac600b2a4b_initial.py  3f0935190fc4_initial_migration.py  756d5ce8b995_fixed_id_constraints_for_vector.py  80ccb33575ab_added_relationship_between_.py  b282b3912e1f_.py  c899d0e89a68_initial.py  cede88021620_replaced_graph_table_with_blob.py  e0b2d1c78bcf_create_initial_database_schema.py  e7898746fdcf_replaced_vector_metadata_table_with_a_.py  fcb7e353a823_initial.py  fea48c4c5797_initial.py
benchmarks/: benchmarks_test.py  conftest.py  dataset_loader.py  latency_test.py  recall_test.py
client/: __init__.py  client.py  collection.py  models.py  transport.py  types.py
data/: vector_db.sqlite-journal
examples/: rag.ipynb  tutorial.ipynb
sdk/: LICENSE  README.md  pyproject.toml
sdk/src/vectordb/: __init__.py  client.py  collection.py  config.py  models.py  transport.py
src/: config.py  main.py  schemas.py
src/api/: __init__.py  app.py  dependencies.py  exception_handlers.py  exceptions.py  routers.py
src/api/models/: metadata.py  search_result.py  vector.py
src/api/routers/: collections.py  search.py  vectors.py
src/common/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  utils.py
src/core/: __init__.py  indexer.py  vector_store.py
src/db/: __init__.py  crud.py  models.py  session.py  uow.py
src/db/repos/: collection.py  index.py  vector.py
src/engine/: __init__.py  graph.py  indexer.py  indexer_manager.py  vector_store.py
src/engine/indexers/: indexer.py  vamana.py
src/engine/structures/: graph.py  vector_store.py
src/schemas/: __init__.py  collection.py  query.py  vector.py
src/services/: __init__.py  collection.py  index.py  search.py
src/storage/: session.py
(+45 files in other folders)
