[project]
name = "vectordb_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "orjson>=3.11.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "tbb>=2022.3.1",
    "uvicorn[standard]>=0.40.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "datasets>=4.5.0",
    "h5py>=3.15.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "vectordb",
]

[tool.uv.workspace]
members = [
    "sdk",
]

[tool.uv.sources]
vectordb = { workspace = true, editable = true }
