[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trovadb"
version = "0.1.0"
description = "A lightweight, pure-Python vector database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "numpy>=2.3.5",
]

[project.optional-dependencies]
server = [
    "alembic>=1.18.0",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "numba>=0.63.1",
    "orjson>=3.11.5",
    "sqlalchemy>=2.0.45",
    "tbb>=2022.3.1",
    "uvicorn[standard]>=0.40.0",
    "uvloop>=0.22.1",
]

[project.scripts]
trovadb-server = "trovadb.server.cli:main"

[dependency-groups]
dev = [
    "datasets>=4.5.0",
    "h5py>=3.15.1",
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trovadb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
