[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb"
version = "0.1.0"
description = "VectorDB Client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "pydantic",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"] 